crates/server/tests/snapshots/replay__series_seasons.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": [
    {
      "artwork": {
        "backdrop": {
          "base": "/images/se1-backdrop",
          "widths": [
            480,
            960
          ]
        },
        "poster": {
          "base": "/images/se1-poster",
          "widths": [
            180,
            480,
            960
          ]
        }
      },
      "id": "se1",
      "number": 1,
      "overview": null,
      "series_id": "s1",
      "title": "Season 1"
    }
  ],
  "status": 200
}
