crates/server/tests/snapshots/replay__server_info.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "capabilities": [
      {
        "available": false,
        "enabled": false,
        "name": "transcription"
      },
      {
        "available": false,
        "enabled": false,
        "name": "translation"
      },
      {
        "available": true,
        "enabled": true,
        "name": "upscaling"
      },
      {
        "available": true,
        "enabled": false,
        "name": "opensubtitles"
      },
      {
        "available": true,
        "enabled": false,
        "name": "tmdb"
      },
      {
        "available": true,
        "enabled": false,
        "name": "tls"
      },
      {
        "available": true,
        "enabled": false,
        "name": "webhooks"
      },
      {
        "available": false,
        "enabled": false,
        "name": "hardware_transcode"
      }
    ],
    "features": [
      "hls",
      "trickplay",
      "transcoding",
      "link_codes",
      "api_tokens"
    ],
    "profile_version": 1,
    "version": "[version]"
  },
  "status": 200
}
