crates/server/tests/snapshots/replay__session_progress.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "heartbeat_interval_s": 10
  },
  "status": 200
}
