crates/server/tests/snapshots/replay__session_start.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "heartbeat_interval_s": 10,
    "manifest_url": "[manifest_url]",
    "markers": {
      "credits": [],
      "intro": []
    },
    "mode": "remux",
    "origin_ms": 0,
    "selected": {
      "audio_track": 1,
      "subtitle_delivery": "hls_vtt",
      "subtitle_track": {
        "index": 1,
        "type": "embedded"
      }
    },
    "sequential": false,
    "session_id": "[session_id]",
    "trickplay": []
  },
  "status": 201
}
