crates/server/tests/snapshots/replay__session_update.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "container": null,
    "manifest_url": "[manifest_url]",
    "mode": "direct",
    "origin_ms": 0,
    "selected": {
      "audio_track": 1,
      "subtitle_delivery": null,
      "subtitle_track": null
    },
    "sequential": false,
    "session_id": "[session_id]"
  },
  "status": 200
}
