crates/server/tests/snapshots/replay__user_hub.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": [
    {
      "id": "recently_added",
      "items": [
        {
          "added_at": "2023-11-14T22:13:22Z",
          "artwork": {
            "backdrop": {
              "base": "/images/s1-backdrop",
              "widths": [
                480,
                960
              ]
            },
            "poster": {
              "base": "/images/s1-poster",
              "widths": [
                180,
                480,
                960
              ]
            }
          },
          "content_rating": {
            "code": "TV-14",
            "system": "TV"
          },
          "id": "s1",
          "overview": null,
          "title": "Alpha s1",
          "type": "series",
          "updated_at": "2023-11-14T22:13:22Z",
          "year": 2019
        },
        {
          "added_at": "2023-11-14T22:13:21Z",
          "artwork": {
            "backdrop": {
              "base": "/images/m1-backdrop",
              "widths": [
                480,
                960
              ]
            },
            "poster": {
              "base": "/images/m1-poster",
              "widths": [
                180,
                480,
                960
              ]
            }
          },
          "content_rating": {
            "code": "PG-13",
            "system": "MPAA"
          },
          "id": "m1",
          "overview": "overview",
          "runtime_minutes": 100,
          "title": "Alpha m1",
          "type": "movie",
          "updated_at": "2023-11-14T22:13:21Z",
          "year": 2020
        }
      ],
      "title": "Recently Added"
    },
    {
      "id": "continue_watching",
      "items": [
        {
          "added_at": "2023-11-14T22:13:21Z",
          "artwork": {
            "backdrop": {
              "base": "/images/m1-backdrop",
              "widths": [
                480,
                960
              ]
            },
            "poster": {
              "base": "/images/m1-poster",
              "widths": [
                180,
                480,
                960
              ]
            }
          },
          "content_rating": {
            "code": "PG-13",
            "system": "MPAA"
          },
          "id": "m1",
          "overview": "overview",
          "runtime_minutes": 100,
          "title": "Alpha m1",
          "type": "movie",
          "updated_at": "2023-11-14T22:13:21Z",
          "year": 2020
        }
      ],
      "title": "Continue Watching"
    }
  ],
  "status": 200
}
