crates/server/tests/snapshots/replay__user_progress.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "position_ms": 1234,
    "updated_at": "[updated_at]",
    "user_id": "u1",
    "version_id": "v1"
  },
  "status": 200
}
