crates/server/tests/snapshots/replay__user_revoke_token.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "not_found",
      "message": "device or API token not found"
    }
  },
  "status": 404
}
